--- a/test.html
+++ b/test.html
@@ -1,5 +1,15 @@
 <input type="checkbox">
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EEKNL76H43"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EEKNL76H43');
+</script>
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE?si=kidCVbV0eMcYhmIv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 <div id="disqus_thread"></div>
@@ -34,4 +44,5 @@
     s0.parentNode.insertBefore(s1,s0);
     })();
     </script>
-    <!--End of Tawk.to Script-->
+<!--End of Tawk.to Script-->
+
