--- a/box.html
+++ b/box.html
@@ -1,37 +1,51 @@
 <!doctype html>
 <html>
 <head>
-<title>WEB1 - CSS</title>
+<title>WEB1 - JavaScript</title>
 <meta charset="utf-8">
-<link rel="stylesheet" href="style.css">
+<style>
+    h1, a{
+        border : 1px solid red;
+        padding : 20px;
+        margin : 20px;
+        height : 50px;
+        width:100px;
+    }
+
+</style>
 </head>
 
 <body>
     <h1><a href="index.html">WEB</a></h1>
-    <div id="grid">
-    <div>
-
-<ol>
-    <li><a href="1.html" class="saw">HTML</a></li>
-    <li><a href="2.html" class="saw active" id="active">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
-</ol>
-</div>
-
-<!--
-<h1><a href="index.html"><font color="red">WEB</font></a></h1>
 <ol>
     <li><a href="1.html">HTML</a></li>
     <li><a href="2.html">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
 </ol>
---><div>
-<h2>CSS</h2>
 
-<a href="https://gall.dcinside.com/mgallery/board/lists/?id=projectmx" target="_blank" title="블아갤">Hypertext Markup Language (HTML)</a> 
-is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications<br>
-<img src="coding.jpg" width="400" height="400" >
-<p style="margin-top:40px;margin-left:40px;">7. 신은 용기있는자를 결코 버리지 않는다 -켄러</p>
+<table>
+    <tr>
+<td>head</td>
+<td>98.1%</td>
+
+    </tr>
+    <td>body</td>
+<td>97.9%</td>
+
+    <tr>
+
+    </tr>
+    <td>html</td>
+<td>97.9%</td>
+
+    <tr>
+
+    </tr>
+</table>
+
+<h2>JavaScript</h2>
+<a href="https://gall.dcinside.com/mgallery/board/lists?id=projectmx" target="_blank" title="블아갤">블아갤</a>
+
 <br>8. 행복의 문이 하나 닫히면 다른 문이 열린다 그러나 우리는 종종 닫힌 문을 멍하니 바라보다가
 <br>9.우리를 향해 열린 문을 보지 못하게 된다 – 헬렌켈러
 <br>10. 피할수 없으면 즐겨라 – 로버트 엘리엇
@@ -46,6 +60,5 @@ is the standard markup language for <strong>creating <u>web</u> pages</strong> a
 <br>19. 내일은 내일의 태양이 뜬다
 <br>20. 피할수 없으면 즐겨라 -로버트 엘리엇
 <br>21.절대 어제를 후회하지 마라. 인생은 오늘의 내 안에 있고 내일은 스스로 만드는것이다. -L론허바드
-</div></div>
 </body>
 </html>
