--- a/index.html
+++ b/index.html
@@ -1,62 +1,16 @@
 <!doctype html>
 <html>
 <head>
-<title>WEB1 - WELCOME</title>
+<title>메인메뉴</title>
 <meta charset="utf-8">
 </head>
-
 <body>
-    <h1><a href="index.html">WEB</a></h1>
-<ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
-</ol>
+<li>
+<ul><a href="1.html" style = "background-color: black; color : white">오셀로 하러 가기</a></ul>
+<ul><a href="poker.html"style = "background-color: black; color : white">보드게임 하러 가기</a></ul>
+<ul><a href="3.html"style = "background-color: black; color : white">단어 연습 하러 가기</a></ul>
 
-<table>
-    <tr>
-<td>head</td>
-<td>98.1%</td>
-
-    </tr>
-    <td>body</td>
-<td>97.9%</td>
-
-    <tr>
-
-    </tr>
-    <td>html</td>
-<td>97.9%</td>
-
-    <tr>
-
-    </tr>
-</table>
-
-<h2>HTML</h2>
-
-<a href="https://gall.dcinside.com/mgallery/board/lists/?id=projectmx" target="_blank" title="블아갤">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications
-<br>1. 삶이 있는 한 희망은 있다 -키케로
-<br>2. 산다는것 그것은 치열한 전투이다. -로망로랑
-<br>3. 하루에 3시간을 걸으면 7년 후에 지구를 한바퀴 돌 수 있다. -사무엘존슨
-<br>4. 언제나 현재에 집중할수 있다면 행복할것이다. -파울로 코엘료
-<br>5. 진정으로 웃으려면 고통을 참아야하며 , 나아가 고통을 즐길 줄 알아야 해 -찰리 채플린
-<p>6. 직업에서 행복을 찾아라. 아니면 행복이 무엇인지 절대 모를 것이다 -엘버트 허버드</p>
-<img src="coding.jpg" width="400" height="400" >
-<p style="margin-top:40px;">7. 신은 용기있는자를 결코 버리지 않는다 -켄러</p>
-<br>8. 행복의 문이 하나 닫히면 다른 문이 열린다 그러나 우리는 종종 닫힌 문을 멍하니 바라보다가
-<br>9.우리를 향해 열린 문을 보지 못하게 된다 – 헬렌켈러
-<br>10. 피할수 없으면 즐겨라 – 로버트 엘리엇
-<br>11. 단순하게 살아라. 현대인은 쓸데없는 절차와 일 때문에 얼마나 복잡한 삶을 살아가는가?-이드리스 샤흐
-<br>12. 먼저 자신을 비웃어라. 다른 사람이 당신을 비웃기 전에 – 엘사 맥스웰
-<br>13. 먼저핀꽃은 먼저진다 남보다 먼저 공을 세우려고 조급히 서둘것이 아니다 – 채근담
-<br>14. 행복한 삶을 살기위해 필요한 것은 거의 없다. -마르쿠스 아우렐리우스 안토니우스
-<br>15. 절대 어제를 후회하지 마라 . 인생은 오늘의 나 안에 있고 내일은 스스로 만드는 것이다 L.론허바드
-<br>16. 어리석은 자는 멀리서 행복을 찾고, 현명한 자는 자신의 발치에서 행복을 키워간다 -제임스 오펜하임
-<br>17. 너무 소심하고 까다롭게 자신의 행동을 고민하지 말라 . 모든 인생은 실험이다 . 더많이 실험할수록 더나아진다 – 랄프 왈도 에머슨
-<br>18. 한번의 실패와 영원한 실패를 혼동하지 마라 -F.스콧 핏제랄드
-<br>19. 내일은 내일의 태양이 뜬다
-<br>20. 피할수 없으면 즐겨라 -로버트 엘리엇
-<br>21.절대 어제를 후회하지 마라. 인생은 오늘의 내 안에 있고 내일은 스스로 만드는것이다. -L론허바드
+</li>
 </body>
 </html>
+
