--- a/dodge.html
+++ b/dodge.html
@@ -9,6 +9,7 @@
         grid-template-columns: 1fr 1fr 1fr 1fr;
         border:solid gray 1px;
         font-size:30px;
+        margin-bottom:10px;
     }
     body{
             height : 98%;
@@ -35,11 +36,9 @@
     <script>
  var circle_Rad = 10;
     var fr=60;
-    var jumpPower;
-    var resistPower;
     var canvas_X;
     var canvas_Y;
-var backGroundColor=0;
+var backGroundColor=30;
 var player_X;
 var player_Y;
 var player_size=10;
