--- a/poker.html
+++ b/poker.html
@@ -18,6 +18,7 @@
         grid-template-columns: 1fr 1fr 1fr 1fr;
         border:solid gray 1px;
         font-size:30px;
+        margin-bottom:10px;
     }   
     #grid2{
         display:grid;
