--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         border: 1px solid gray;
         display:grid;
         grid-template-columns: 250px 1fr;
+        margin-bottom:10px;
     }
     img{
         display:block;
