--- a/typing.html
+++ b/typing.html
@@ -12,6 +12,7 @@
         grid-template-columns: 1fr 1fr 1fr 1fr;
         border:solid gray 1px;
         font-size:30px;
+       margin-bottom:10px;
     }
     #grid2{
         display:grid;
@@ -38,7 +39,7 @@
             <div><a href="dodge.html">닷지 하러가기</a></div>
             <div><a href="snakeGame.html">스네이크 게임 하러가기</a></div>
             </div>
-            <div id="grid2"><div>
+            <div id="grid2"><div style="text-align: center;">
         <span id="score"></span><br><span id="replay" display="none"></span> <input type="text" id="input" style="width: 200px;height:50px;display:none;" placeholder="현재 단어를 입력하세요!" onkeyup="run()">
         <span id="timer"></span><br>
         <span id="timer2"></span>
@@ -46,7 +47,12 @@
         <span id="select_difficulty">난이도를 선택해주세요 : </span> <input class="selector" type="button" value="쉬움" onclick ="easymode()">  <input class="selector" type="button" value="중간" onclick ="normalmode()">  <input class="selector" type="button" value="어려움" onclick ="hardmode()"> 
         <div id="t1" style="display: inline;"></div><br><div style="display: inline;" id="t2"></div>
         </div>
-        <div>쉬움 : 2글자 이하의 단어만 나옵니다.<br>보통 : 2글자에서 3글자 사이의 단어가 나옵니다.<br>어려움 : 3글자 이상의 단어가 나옵니다.<br>※연습할 때 심심하실까봐 배경음악을 넣어보았습니다. 난이도를 선택하시면 재생됩니다.
+        <div>쉬움 : 2글자 이하의 단어만 나옵니다.<br>
+            보통 : 2글자에서 3글자 사이의 단어가 나옵니다.<br>
+            어려움 : 3글자 이상의 단어가 나옵니다.<br>
+            난이도를 선택하신 후 등장하는 입력창에 현재 단어를 입력하시면 됩니다.<br>
+            다음에 입력하실 단어는 다음 단어 칸을 통해 미리 확인하실 수 있습니다. 최대한 많은 점수를 얻어보세요!<br>
+            ※연습할 때 심심하실까봐 배경음악을 넣어보았습니다. 난이도를 선택하시면 재생됩니다.
         </div>
         </div>
     </body>
@@ -90,7 +96,7 @@
             sound_bgm=new Audio('./sound/greengreen.mp3');
             sound_bgm.play();
             sound_bgm.loop=true;
-            sound_bgm.volume=0.7;
+            sound_bgm.volume=0.4;
             setting();
 
             wordLoading_init();
