--- a/dodge.html
+++ b/dodge.html
@@ -2,28 +2,9 @@
     <head>
       <title>닷지</title><link rel="icon" href="./image/favicon.png">
         <script src="https://cdn.jsdelivr.net/npm/p5@1.8.0/lib/p5.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="form_game.css">
     </head>
     <style>
-    #grid{
-      display:grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        border:solid gray 1px;
-        font-size:30px;
-        margin-bottom:10px;
-    }
-    body{
-            height : 98%;
-        width : 98%;
-        background-image: url("./image/5.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        opacity: 1;
-   }
-    a{
-        text-decoration: none;
-        color:white;
-        font-weight: bold;
-    }
     </style>
     <body>
       <div id="grid">
