--- a/snakeGame.html
+++ b/snakeGame.html
@@ -2,28 +2,7 @@
     <head>
       <title>스네이크 게임</title><link rel="icon" href="./image/favicon.png">
         <script src="https://cdn.jsdelivr.net/npm/p5@1.8.0/lib/p5.min.js"></script>
-        <style>
-          #grid{
-            display:grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        border:solid gray 1px;
-        font-size:30px;
-        margin-bottom:10px;
-          }
-          body{
-            height : 98%;
-        width : 98%;
-        background-image: url("./image/6.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        opacity: 1;
-          }
-          a{
-        text-decoration: none;
-        color : white;
-        font-weight: bold;
-    }
-          </style>
+        <link rel="stylesheet" type="text/css" href="form_game.css">
     </head>
     <body>
       <div id="grid">
