--- a/typing.html
+++ b/typing.html
@@ -2,36 +2,8 @@
 <html>
     <head>
         <title>미니 타자 연습</title><link rel="icon" href="./image/favicon.png">
+        <link rel="stylesheet" type="text/css" href="form_game.css">
     </head>
-    <style>
-        div{
-        color:white;
-    }
-    #grid{
-        display:grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        border:solid gray 1px;
-        font-size:30px;
-       margin-bottom:10px;
-    }
-    #grid2{
-        display:grid;
-        grid-template-columns: 1fr 1fr;
-    }
-    body{
-        height : 100vh;
-        width : 99%;
-        background-image: url("./image/6.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        opacity: 1;
-          }
-          a{
-        text-decoration: none;
-        color:white;
-        font-weight: bold;
-    }
-        </style>
     <body>
         <div id="grid">
             <div><a href="index.html" style="font-size: 30px;">홈 페이지</a></div>
