--- a/index.html
+++ b/index.html
@@ -3,50 +3,7 @@
 <head>
 <title>미니게임 홈페이지</title><link rel="icon" href="./image/favicon.png">
 <meta charset="utf-8">
-<style>
-    h1{
-        font-size: 30px;
-        text-align: center;
-        border-bottom:2px solid gray;
-        margin:0;
-    }
-    ul{
-        width: 200px;
-        height:1fr;
-        margin:0;
-        padding:20px;
-    }
-    a{
-        text-decoration: none;
-        color:white;
-        font-weight: bold;
-    }
-    
-    div{
-        border:1px solid gray;
-    }
-    #grid{
-        border: 1px solid gray;
-        display:grid;
-        grid-template-columns: 250px 1fr;
-        margin-bottom:10px;
-    }
-    img{
-        display:block;
-        margin:auto;
-    }
-    html{
-        height : 100vh;
-        width : 99%;
-        background-image: url("./image/5.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        opacity: 1;
-    }
-    p{
-        color:white;
-    }
-</style>
+<link rel="stylesheet" type="text/css" href="form_main.css">
 </head>
 <body>
     
