--- a/poker.html
+++ b/poker.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>컴퓨터와 포커</title><link rel="icon" href="./image/favicon.png">
+    <link rel="stylesheet" type="text/css" href="form_game.css">
 <meta charset="UTF-8">
 <style>
     img{
@@ -13,33 +14,6 @@
         flex : 1;
         grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
     }
-    #grid{
-        display:grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        border:solid gray 1px;
-        font-size:30px;
-        margin-bottom:10px;
-    }   
-    #grid2{
-        display:grid;
-        grid-template-columns: 1fr 1fr;
-    }
-    a{
-        text-decoration: none;
-        color:white;
-        font-weight: bold;
-    }
-    body{
-        height : 100vh;
-        width : 99%;
-        background-image: url("./image/5.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        opacity: 1;
-          }
-          div{
-            color:white;
-          }
 </style>
 </head>
 <body>
